[package]
authors = ["Luke Eltiste"]
description = "A CLI Program to help manage projects"
edition = "2021"
name = "fpm"
readme = "README.md"
repository = "https://github.com/Frazzer951/fpm"
version = "0.4.0"

[dependencies]
clap = {version = "3.2.6", features = ["derive", "cargo"]}
config = "0.13.1"
dirs = "4.0.0"
fs_extra = "1.2.0"
itertools = "0.10.3"
opener = "0.5.0"
regex = "1.5.6"
serde = {version = "1.0.137", features = ["derive"]}
serde_derive = "1.0.137"
serde_json = "1.0.81"
serde_yaml = "0.8.24"
strsim = "0.10.0"
toml = "0.5.9"
