[package]
authors = ["Luke Eltiste"]
description = "A CLI Program to help manage projects"
edition = "2021"
name = "fpm"
readme = "README.md"
repository = "https://github.com/Frazzer951/fpm"
version = "0.5.1"

[lib]
name = "fpm"
path = "src/lib.rs"

[[bin]]
name = "fpm"
path = "src/main.rs"

[dependencies]
clap = {version = "4.0", features = ["cargo"]}
config = "0.13"
dirs = "4.0"
fs-err = "2.7"
itertools = "0.10"
opener = "0.5"
path-absolutize = "3.0"
regex = "1.5"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
strsim = "0.10"
toml = "0.5"
walkdir = "2.3"

[dev-dependencies]
serial_test = "0.9"
