[package]
authors = ["Luke Eltiste"]
description = "A CLI Project Manager to create and manage directories for all of your projects"
edition = "2021"
license = "MIT"
name = "fpm-cli"
readme = "README.md"
repository = "https://github.com/Frazzer951/fpm"
version = "0.6.0"

[[bin]]
name = "fpm"
path = "src/main.rs"

[dependencies]
clap = {version = "4.0", features = ["cargo"]}
console = "0.15"
dialoguer = "0.10"
eyre = "0.6"
indicatif = "0.17"
fpm-lib = {path = "../fpm-lib", version = "0"}
prettytable-rs = "0.10"
thiserror = "1.0"

[package.metadata.release]
shared-version = true
