[package]
edition = "2021"
name = "fpm"
version = "0.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0"
fs-err = "2.9"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
diff = "0.1"
