[package]
authors = ["Luke Eltiste"]
description = "A CLI Project Manager to create and manage directories for all of your projects"
edition = "2021"
license = "MIT"
name = "fpm"
readme = "README.md"
repository = "https://github.com/Frazzer951/fpm"
version = "0.6.0"

[dependencies]
clap = {version = "4.0", features = ["cargo"]}
console = "0.15"
dialoguer = "0.10"
eyre = "0.6"
indicatif = "0.17"
lib_fpm = {path = "../lib_fpm"}
prettytable-rs = "0.10"
thiserror = "1.0"

[package.metadata.release]
shared-version = true
