[package]
authors = ["Luke Eltiste"]
description = "A CLI Project Manager to create and manage directories for all of your projects"
edition = "2021"
license = "MIT"
name = "lib_fpm"
repository = "https://github.com/Frazzer951/fpm"
version = "0.6.0"

[dependencies]
dirs = "4.0"
fs-err = "2.9.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
toml = "0.7"
turbosql = "0.7"

[dev-dependencies]
anyhow = "1.0"
diff = "0.1"

[package.metadata.release]
release = false
shared-version = true
